# aws-lambda-ecs-riemann-reload

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  Jenkinsfile_pullrequest  Makefile  README.md  buildspec.yml  buildspec_pr.yml  pyproject.toml
ecs_riemann_reload/: __init__.py
resources/aws-sam-cli/: template.yaml
src/: handler.py
tests/: ecs_riemann_reload_test.py
tests/unit/: ecs_riemann_reload_test.py
